<resources>
    <string name="app_name">Eventus</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrar_user">Registrarse</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">E-mail</string>
    <string name="telefono">Telefono</string>

    <string name="btnRegistrarEvento">Registrar evento</string>
    <string name="btnAnticipos">Anticipos</string>
    <string name="btnCotizaciones">Cotizaciones</string>
    <string name="btnContinuar">Siguiente</string>
    <string name="btnSalir">Salir</string>
    <string name="btnRegresar">Regresar</string>

    <string name="select_event">Selecciona el tipo de evento</string>

    <string name="option_cumple">Cumpleaños</string>
    <string name="option_findeaño">Fin de año</string>
    <string name="option_boda">Boda</string>
    <string name="option_show">Show</string>
    <string name="option_despedia_soltero">Despedida de soltero</string>
    <string name="option_despedia_soltera">Despedida de soltera</string>
    <string name="option_graduacion">Graduación</string>
    <string name="option_babyshower">Baby shower</string>

    <string name="txtDatosDelEvento">Datos del evento</string>
    <string name="txtNombreEvento">Nombre del evento</string>
    <string name="txtFechaEvento">Fecha del evento</string>
    <string name="txtHorario">Horario</string>
    <string name="txtHorarioInicio">Inicio</string>
    <string name="txtHorarioFinal">Fin</string>
    <string name="txtDatosDelCliente">Datos del cliente</string>

    <string name="hintAnticipo">$ 0.00</string>

    <string-array name="metodos_de_pago">
        <item>Selecciona una opción</item>
        <item>Debito</item>
        <item>Credito</item>
        <item>Paypal</item>
        <item>Bitcoin</item>
    </string-array>
</resources>