<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Registro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="center"
        android:src="@drawable/LogoEventus3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="@color/naranja">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"/>

        <EditText
            android:id="@+id/apellido"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:hint="@string/apellido"
            android:inputType="text"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:hint="@string/nombre_usuario"
            android:inputType="text"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnRegistro"
            android:layout_marginTop="15dp"
            android:layout_width="237dp"
            android:layout_height="59dp"
            android:text="@string/registrar_user"
            android:textSize="25sp"
            android:textColor="@color/naranja"
            android:layout_gravity="center"
            android:background="@drawable/round_button2"/>

        <Button
            android:id="@+id/btnIniciar"
            android:layout_marginTop="15dp"
            android:layout_width="237dp"
            android:layout_height="59dp"
            android:text="@string/iniciar"
            android:textSize="25sp"
            android:textColor="@color/naranja"
            android:layout_gravity="center"
            android:background="@drawable/round_button2"/>

    </LinearLayout>

</LinearLayout>