<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranja"
    tools:context=".Registrar_datos_cliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="center"
            android:src="@drawable/logo_eventus3"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDatosDelCliente"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"/>

    <EditText
        android:id="@+id/edit_nombreCliente"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/nombre"
        android:textColorHint="@color/naranja"
        android:inputType="textPersonName"
        android:textColor="@color/naranja"
        android:textAlignment="center"
        android:background="@drawable/round_button"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edit_telefonoCliente"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/telefono"
        android:textColorHint="@color/naranja"
        android:inputType="textPhonetic"
        android:textColor="@color/naranja"
        android:textAlignment="center"
        android:background="@drawable/round_button"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edit_emailCliente"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textColorHint="@color/naranja"
        android:inputType="textEmailAddress"
        android:textColor="@color/naranja"
        android:textAlignment="center"
        android:background="@drawable/round_button"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_marginTop="100dp"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:text="@string/btnContinuar"
        android:textSize="25sp"
        android:textColor="@color/naranja"
        android:layout_gravity="center"
        android:background="@drawable/round_button2"/>

</LinearLayout>