<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranja"
    tools:context=".Registrar_datos_evento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_button"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:background="@drawable/logo_eventus3"/>

    </LinearLayout>


    <TextView
        android:id="@+id/titulo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDatosDelEvento"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edit_nombreEvento"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/txtNombreEvento"
        android:textColorHint="@color/naranja"
        android:inputType="text"
        android:textColor="@color/naranja"
        android:textAlignment="center"
        android:background="@drawable/round_button"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_fechaEvento"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/txtFechaEvento"
        android:textColorHint="@color/naranja"
        android:inputType="date"
        android:textColor="@color/naranja"
        android:textAlignment="center"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/round_button"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtHorario"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/ed_horaInicio"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/txtHorarioInicio"
            android:textColorHint="@color/naranja"
            android:inputType="time"
            android:textColor="@color/naranja"
            android:textAlignment="center"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/round_button"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="----"
            android:textSize="35sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/ed_horaFinal"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/txtHorarioFinal"
            android:textColorHint="@color/naranja"
            android:inputType="time"
            android:textColor="@color/naranja"
            android:clickable="false"
            android:focusable="false"
            android:textAlignment="center"
            android:background="@drawable/round_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_marginTop="100dp"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:text="@string/btnContinuar"
        android:textSize="25sp"
        android:textColor="@color/naranja"
        android:layout_gravity="center"
        android:background="@drawable/round_button2"/>

</LinearLayout>